Templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: st-healthcheck
  namespace: NAMESPACEGOESHERE
spec:
  replacePath:
    path: /actuator/health
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: st-metrics
  namespace: NAMESPACEGOESHERE
spec:
  replacePath:
    path: /actuator/metrics
