Templates/full-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACEGOESHERE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAMEGOESHERE
  namespace: NAMESPACEGOESHERE
spec:
  selector:
    matchLabels:
      app: NAMEGOESHERE
  replicas: 1  
  template:
    metadata:
      labels:
        app: NAMEGOESHERE
    spec:
      containers:
        - name: NAMEGOESHERE-pod
          image: vsimone67/NAMEGOESHERE:latest
          imagePullPolicy: "Always"
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: configs
              mountPath: "/app/settings"
          livenessProbe:
           httpGet:
             path: /health
             port: 80
           initialDelaySeconds: 5
           periodSeconds: 5        
      volumes:
            - name: configs
              projected:
                sources:
                  - configMap:
                      name: appsettings-NAMEGOESHERE
                  - secret:
                      name: appsettings-secret-NAMEGOESHERE"
---
apiVersion: v1
kind: Service
metadata:
  name: NAMEGOESHERE-svc
  namespace: NAMESPACEGOESHERE
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: NAMEGOESHERE
  type: LoadBalancer
