Templates/traefik-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACEGOESHERE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAMEGOESHERE
  namespace: NAMESPACEGOESHERE
spec:
  selector:
    matchLabels:
      app: NAMEGOESHERE
  replicas: 1
  template:
    metadata:
      labels:
        app: NAMEGOESHERE
    spec:
      containers:
        - name: NAMEGOESHERE-pod
          image: vsimone67/NAMEGOESHERE:latest
          imagePullPolicy: 'Always'
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: configs
              mountPath: '/app/settings'
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: configs
          projected:
            sources:
              - configMap:
                  name: appsettings-NAMEGOESHERE
              - secret:
                  name: appsettings-secret-NAMEGOESHERE"
---
apiVersion: v1
kind: Service
metadata:
  name: NAMEGOESHERE-svc
  namespace: NAMESPACEGOESHERE
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: NAMEGOESHERE
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: NAMEGOESHERE-route
  namespace: NAMESPACEGOESHERE
spec:
  entryPoints:
    - web
  routes:
    # - match: Host(`DNSHERE`) && PathPrefix(`/PATHPREFIXHERE`)
    #   kind: Rule
    #   services:
    #     - name: NAMEGOESHERE-svc
    #       port: 80
    - match: Host(`DNSHERE`)
      kind: Rule
      services:
        - name: NAMEGOESHERE-svc
          port: 80
