Templates/traefik-nohost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: NAMEGOESHERE
  namespace: NAMESPACEGOESHERE
spec:
  selector:
    matchLabels:
      app: NAMEGOESHERE
  replicas: 1
  template:
    metadata:
      labels:
        app: NAMEGOESHERE
    spec:
      containers:
        - name: NAMEGOESHERE-pod
          image: vsimone67/NAMEGOESHERE:latest
          imagePullPolicy: 'Always'
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: configs
              mountPath: '/app/settings'
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 360
      volumes:
        - name: configs
          projected:
            sources:
              - configMap:
                  name: appsettings-NAMEGOESHERE
              - secret:
                  name: appsettings-secret-NAMEGOESHERE
---
apiVersion: v1
kind: Service
metadata:
  name: NAMEGOESHERE-svc
  namespace: NAMESPACEGOESHERE
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: NAMEGOESHERE
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: NAMEGOESHERE-route
  namespace: NAMESPACEGOESHERE
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/SERVICENAME/{catchall}`)
      kind: Rule
      services:
        - name: NAMEGOESHERE-svc
          port: 80
    - match: PathPrefix(`/ACTUATOR/health`)
      kind: Rule
      services:
        - name: NAMEGOESHERE-svc
          port: 80
      middlewares:
        - name: st-healthcheck
    - match: PathPrefix(`/ACTUATOR/metrics`)
      kind: Rule
      services:
        - name: NAMEGOESHERE-svc
          port: 80
      middlewares:
        - name: st-metrics
